fix checkout on ios mobile devices

--- a/index.css
+++ b/index.css
@@ -80,13 +80,19 @@ form#ticketform {
 	}
 }
 
-.form-front {
+.form-front, .form-back {
 	opacity: 1;
 	transition: opacity 1s cubic-bezier(0,0,0.3,1);
 }
 
 .form-flipper--flipped > .form-front {
 	opacity: 0;
+	pointer-events: none;
+}
+
+.form-flipper:not(.form-flipper--flipped) > .form-back {
+	opacity: 0;
+	pointer-events: none;
 }
 
 .form-back, .form-front {
